Add search by AnchorElementInfo; add support for the case where anchor and search as the same element

--- a/src/test/resources/google-signup.html
+++ b/src/test/resources/google-signup.html
@@ -112,6 +112,9 @@
                                                         </div>
                                                         <div class="i9lrp mIZh1c"></div>
                                                         <div jsname="XmnwAc" class="OabDMe cXrdqd Y2Zypf"></div>
+                                                        <div>
+                                                            <button>Next</button>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="LXRPh">
