Better indexing xpath, making lossless transforming from Jsoup element to xpath

--- a/src/test/resources/google-signup.html
+++ b/src/test/resources/google-signup.html
@@ -109,6 +109,7 @@
                                                         <div class="Xb9hP">
                                                             <input type="text" class="whsOnd zHQkBf" jsname="YPqjbf" autocomplete="off" spellcheck="false" tabindex="0" aria-label="First name" name="firstName" value="" autocapitalize="sentences" id="firstName" data-initial-value="">
                                                             <div jsname="YRMmle" class="AxOyFc snByac" aria-hidden="true">First name</div>
+                                                            <input type="text" class="whsOnd zHQkBf" jsname="test01">
                                                         </div>
                                                         <div class="i9lrp mIZh1c"></div>
                                                         <div jsname="XmnwAc" class="OabDMe cXrdqd Y2Zypf"></div>
